// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionCard should render expense transaction correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderBottomLeftRadius": 12,
      "borderBottomRightRadius": 12,
      "borderTopLeftRadius": 12,
      "borderTopRightRadius": 12,
      "elevation": 3,
      "flexDirection": "row",
      "marginBottom": 16,
      "paddingBottom": 24,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(232, 63, 91, 0.5)",
        "borderBottomLeftRadius": 39,
        "borderBottomRightRadius": 39,
        "borderTopLeftRadius": 39,
        "borderTopRightRadius": 39,
        "height": 78,
        "justifyContent": "center",
        "marginRight": 16,
        "width": 78,
      }
    }
    type="negative"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 12,
          },
          {
            "color": "#969cb2",
            "fontSize": 31,
          },
          {
            "fontFamily": "feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#363f5f",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 27,
        }
      }
    >
      Mercado
    </Text>
    <Text
      style={
        {
          "color": "#e83f5b",
          "fontFamily": "Poppins_500Medium",
          "fontSize": 35,
          "marginTop": 2,
        }
      }
      type="negative"
    >
      - 
      R$ 350,00
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#969cb2",
              "fontSize": 24,
              "marginLeft": 8,
            }
          }
        >
          Alimentação
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#BBBFD0",
            "fontSize": 24,
          }
        }
      >
        15/03/26
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionCard should render income transaction correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderBottomLeftRadius": 12,
      "borderBottomRightRadius": 12,
      "borderTopLeftRadius": 12,
      "borderTopRightRadius": 12,
      "elevation": 3,
      "flexDirection": "row",
      "marginBottom": 16,
      "paddingBottom": 24,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(18, 164, 84, 0.5)",
        "borderBottomLeftRadius": 39,
        "borderBottomRightRadius": 39,
        "borderTopLeftRadius": 39,
        "borderTopRightRadius": 39,
        "height": 78,
        "justifyContent": "center",
        "marginRight": 16,
        "width": 78,
      }
    }
    type="positive"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 12,
          },
          {
            "color": "#969cb2",
            "fontSize": 31,
          },
          {
            "fontFamily": "feather",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#363f5f",
          "fontFamily": "Poppins_400Regular",
          "fontSize": 27,
        }
      }
    >
      Salario
    </Text>
    <Text
      style={
        {
          "color": "#12A454",
          "fontFamily": "Poppins_500Medium",
          "fontSize": 35,
          "marginTop": 2,
        }
      }
      type="positive"
    >
      R$ 5.000,00
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#969cb2",
              "fontSize": 24,
              "marginLeft": 8,
            }
          }
        >
          Salário
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#BBBFD0",
            "fontSize": 24,
          }
        }
      >
        01/03/26
      </Text>
    </View>
  </View>
</View>
`;
